--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <h1 id="title">Yeah, it's works</h1>
+    <todo title="titre"></todo>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
