--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -12,9 +12,11 @@
 </head>
 
 <body>
-    <h1 id="title">Yeah, it's works</h1>
-    <todo title="titre"></todo>
+    <mm-player></mm-player>
+    <mm-search></mm-search>
     <script type="text/javascript" src="js/app.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=init"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 
 </html>
