play/pause video

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
+    <div id="log"></div>
     <mm-player></mm-player>
     <mm-search></mm-search>
+    <mm-video></mm-video>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
