only one mp3 works!

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <mm-webrtc></mm-webrtc>
     <mm-player></mm-player>
     <mm-search></mm-search>
     <mm-video></mm-video>
