--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The description of new app">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
@@ -19,7 +20,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script>
+   <!-- <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -34,7 +35,7 @@
 
     ga('create', 'UA-74349110-1', 'auto');
     ga('send', 'pageview');
-    </script>
+    </script>-->
 </body>
 
 </html>
