--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,14 +13,17 @@
 </head>
 
 <body>
+    <mm-title></mm-title>
+    <mm-parameters></mm-parameters>
     <mm-webrtc></mm-webrtc>
     <mm-player></mm-player>
     <mm-search></mm-search>
     <mm-video></mm-video>
+    <mm-social></mm-social>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-   <!-- <script>
+    <!-- <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
