--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The description of new app">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
+    <mm-title></mm-title>
+    <mm-parameters></mm-parameters>
     <mm-webrtc></mm-webrtc>
     <mm-player></mm-player>
     <mm-search></mm-search>
     <mm-video></mm-video>
+    <mm-social></mm-social>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script>
+    <!-- <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -34,7 +38,7 @@
 
     ga('create', 'UA-74349110-1', 'auto');
     ga('send', 'pageview');
-    </script>
+    </script>-->
 </body>
 
 </html>
