--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<div id='bodyContainer'>
     <mm-webrtc></mm-webrtc>
     <mm-title></mm-title>
     <mm-player></mm-player>
@@ -20,10 +21,11 @@
     <mm-video></mm-video>
     <mm-social></mm-social>
     <mm-parameters></mm-parameters>
+    </div>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <!-- <script>
+     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -38,7 +40,7 @@
 
     ga('create', 'UA-74349110-1', 'auto');
     ga('send', 'pageview');
-    </script>-->
+    </script>
 </body>
 
 </html>
