--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="manifest" href="/manifest.webapp">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-     <script>
+    <!-- <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -40,7 +41,7 @@
 
     ga('create', 'UA-74349110-1', 'auto');
     ga('send', 'pageview');
-    </script>
+    </script>-->
 </body>
 
 </html>
