--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
-    <link rel="manifest" href="/manifest.webapp">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
 </head>
 
 <body>
-<div id='bodyContainer'>
-    <mm-webrtc></mm-webrtc>
-    <mm-title></mm-title>
-    <mm-player></mm-player>
-    <mm-search></mm-search>
-    <mm-video></mm-video>
-    <mm-social></mm-social>
-    <mm-parameters></mm-parameters>
+    <div id='bodyContainer'>
+        <mm-webrtc></mm-webrtc>
+        <mm-title></mm-title>
+        <mm-player></mm-player>
+        <mm-search></mm-search>
+        <mm-video></mm-video>
+        <mm-social></mm-social>
+        <mm-parameters></mm-parameters>
     </div>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
