--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="The description of new app">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/app.css">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -31,7 +31,8 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-    <!-- <script>
+    <script type="text/javascript" src="js/service-worker.js"></script>
+    <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -46,7 +47,7 @@
 
     ga('create', 'UA-74349110-1', 'auto');
     ga('send', 'pageview');
-    </script>-->
+    </script>
 </body>
 
 </html>
