--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,23 +9,30 @@
     <meta name="description" content="The description of new app">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/app.css">
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
 </head>
 
 <body>
-<div id='bodyContainer'>
-    <mm-webrtc></mm-webrtc>
-    <mm-title></mm-title>
-    <mm-player></mm-player>
-    <mm-search></mm-search>
-    <mm-video></mm-video>
-    <mm-social></mm-social>
-    <mm-parameters></mm-parameters>
+    <div id='bodyContainer'>
+        <mm-webrtc></mm-webrtc>
+        <mm-title></mm-title>
+        <mm-player></mm-player>
+        <mm-search></mm-search>
+        <mm-video></mm-video>
+        <mm-social></mm-social>
+        <mm-parameters></mm-parameters>
     </div>
     <script type="text/javascript" src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
-     <script>
+    <script type="text/javascript" src="js/service-worker.js"></script>
+<!--     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
@@ -40,7 +47,7 @@
 
     ga('create', 'UA-74349110-1', 'auto');
     ga('send', 'pageview');
-    </script>
+    </script> -->
 </body>
 
 </html>
